feat(service): implement methods for finding, deleting, and updating products in ProductServiceImpl